@@ -81,8 +81,11 @@ please consult miniRMI's documentation to learn how to use it.</p>
   <tr>
     <td valign="top">stubversion</td>
     <td valign="top">Specify the JDK version for the generated stub code.
- Specify &quot;1.1&quot; to pass the &quot;-v1.1&quot; option to rmic.</td>
-    <td align="center" valign="top">No</td>
+ Specify &quot;1.1&quot; to pass the &quot;-v1.1&quot; option to rmic,
+ "1.2" for -v12, compat for -vcompat. 
+ 
+ </td>
+    <td align="center" valign="top">No, default="compat"</td>
   </tr>
   <tr>
     <td valign="top">classpath</td>
